enable task, twitter

--- a/dist.ini
+++ b/dist.ini
@@ -4,3 +4,8 @@ license = Perl_5
 copyright_holder = Michael Schout
 
 [@MSCHOUT]
+task = 1
+
+[Twitter]
+hash_tags = #perl
+tweet_url = https://github.com/mschout/dist-zilla-pluginbundle-mschout/commits/v{{$VERSION}}
