--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200006, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Dist::Zilla version 4.300032, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -24,25 +24,42 @@ requires:
   CSS::Minifier::XS: 0
   DBD::SQLite: 0
   DBI: 0
+  Devel::NYTProf: 0
+  Dist::Zilla::Plugin::GitHub: 0
   Dist::Zilla::Plugin::Twitter: 0
   Dist::Zilla::PluginBundle::MSCHOUT: 0
-  Dist::Zilla::PluginBundle::RJBS: 0
+  File::Find::Rule: 0
+  Git::CPAN::Patch: 0
   Gravatar::URL: 0
   IO::Socket::SSL: 0
   IPC::System::Simple: 0
   JavaScript::Minifier: 0
   JavaScript::Minifier::XS: 0
+  LWP: 0
   LWP::Protocol::https: 0
+  List::MoreUtils: 0
+  Method::Signatures: 0
   Modern::Perl: 0
+  Moo: 0
+  Moose: 0
+  Moose::Autobox: 0
+  MooseX::App: 0
+  MooseX::Method::Signatures: 0
+  Mouse: 0
+  Perl6::Junction: 0
   Perl::Tidy: 0
   Pod::Coverage::TrustPod: 0
   SQL::Beautify: 0
   String::Truncate: 0
   Template::Test: 0
   Test::Pod::Coverage: 0
+  TryCatch: 0
+  URI: 0
   Vimana: 0
+  strict: 0
+  warnings: 0
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Task-BeLike-MSCHOUT
   homepage: http://search.cpan.org/dist/Task-BeLike-MSCHOUT/
   repository: git://github.com/mschout/task-belike-mschout.git
-version: 1.111500
+version: 1.130940
