--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,4 @@ copyright_holder = Michael Schout
 
 [@MSCHOUT]
 task = 1
-
-[Twitter]
-hash_tags = #perl
-tweet_url = https://github.com/mschout/dist-zilla-pluginbundle-mschout/commits/v{{$VERSION}}
+use_twitter = 1
