Build results of 3c15e3e (on master)

--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 6.005, CPAN::Meta::Converter version 2.150005'
+generated_by: 'Dist::Zilla version 6.009, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -31,6 +31,7 @@ requires:
   Dist::Zilla::Plugin::Twitter: '0'
   Dist::Zilla::PluginBundle::MSCHOUT: '0'
   File::Find::Rule: '0'
+  Function::Parameters: '0'
   Git::CPAN::Patch: '0'
   Gravatar::URL: '0'
   IO::Socket::SSL: '0'
@@ -46,16 +47,15 @@ requires:
   Moose: '0'
   Moose::Autobox: '0'
   MooseX::App: '0'
-  MooseX::Method::Signatures: '0'
   Mouse: '0'
   Perl6::Junction: '0'
   Perl::Tidy: '0'
   Pod::Coverage::TrustPod: '0'
   SQL::Beautify: '0'
   String::Truncate: '0'
+  Syntax::Feature::Try: '0'
   Template::Test: '0'
   Test::Pod::Coverage: '0'
-  TryCatch: '0'
   URI: '0'
   Vimana: '0'
   WWW::Shorten: '0'
@@ -65,4 +65,5 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Task-BeLike-MSCHOUT
   homepage: http://search.cpan.org/dist/Task-BeLike-MSCHOUT/
   repository: git://github.com/mschout/task-belike-mschout.git
-version: '1.162770'
+version: '1.171510'
+x_serialization_backend: 'YAML::Tiny version 1.69'
